fix coefficient keep

--- a/Assigment/data_processing.ipynb
+++ b/Assigment/data_processing.ipynb
@@ -576,7 +576,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2266\n"
+      "252\n"
      ]
     },
     {
@@ -593,7 +593,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2392\n"
+      "126\n"
      ]
     },
     {
@@ -610,7 +610,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2515\n"
+      "3\n"
      ]
     }
    ],
@@ -647,7 +647,7 @@
     "    plt.title(\"keep = \" + str(keep))\n",
     "    plt.show()\n",
     "\n",
-    "    print(int(np.floor((1-keep)*len(Csort))))\n",
+    "    print(len(Csort)-int(np.floor((1-keep)*len(Csort))))\n",
     "\n"
    ]
   },
